# Monkey

./: .clang-tidy  .gitignore  CMakeLists.txt  Euclid.cpp  EventSet.cpp  LICENSE  Makefile  Monkey.code-workspace  Monkey.cpp  Monkey.h  Music.cpp  README.md  music_test.cpp  weighted_map_example.cpp
Music/: Chord.h  EventSet.h  Gnome.h  Labels.h  Music.h  MusicConst.h  MusicHelpers.h  MusicTypes.h  Note.h  NoteValue.h  PitchEngine.h  ScaleMap.h  ScaleMaps.h  Tables.h  Temperament.h  TimeSignature.h  Tone12.h  Tone15.h  Tone17.h  Tone19.h
examples/: music_demo.cpp  plot_things.cpp  weighted_map_example.cpp
include/: MString.h  Monkey.h  Singleton.h  TTY.h  monkey.hpp  mstring.hpp  singleton.hpp  tty.h
include/Music/: Chord.h  EventSet.h  EventSetManager.h  Generator.h  Gnome.h  Music.h  MusicConfig.h  MusicConst.h  MusicHelpers.h  MusicTemplates.h  MusicTypes.h  Note.h  NoteGenerator.h  NoteValue.h  PatternGenerator.h  Persona.h  PitchEngine.h  ScaleMap.h  ScaleMaps.h  Setup.h  Tables.h  Temperament.h  TimeSignature.h  Tone12.h  Tone15.h  Tone17.h  Tone19.h
include/music/: chord.hpp  event_set.hpp  event_set_manager.hpp  gnome.hpp  music.hpp  music_config.hpp  music_helpers.hpp  music_setup.hpp  music_tables.hpp  note.hpp  (+10 more)
src/: Debug.cpp  Euclid.cpp  EventSet.cpp  Gen.cpp  Monkey.cpp  Music.cpp  monkey.cpp  music.cpp  test.c
test/: TestFramework.h  chord_test.cpp  event_set_test.cpp  gnome_test.cpp  mstring_test.cpp  music_test.cpp  note_generator_test.cpp  persona_test.cpp  pitch_engine_test.cpp  scale_map_test.cpp  test_framework.hpp  time_signature_test.cpp
(+20 files in other folders)
